Adding pulled files