@@ -689,7 +689,7 @@ public final class Caster {
             
         }
         else if(o instanceof Date) return (int)new DateTimeImpl((Date)o).castToDoubleValue();
-        else if(o instanceof ObjectWrap) return toIntValue(((ObjectWrap)o).getEmbededObject(new Integer(defaultValue)),defaultValue);
+        else if(o instanceof ObjectWrap) return toIntValue(((ObjectWrap)o).getEmbededObject(Integer.valueOf(defaultValue)),defaultValue);
 		
         return defaultValue;
     }
@@ -1352,7 +1352,7 @@ public final class Caster {
      * @return casted Long Object
      */
     public static Long toLong(boolean b) {
-        return new Long(toLongValue(b));
+        return Long.valueOf(toLongValue(b));
     }
     
     /**
@@ -1361,7 +1361,7 @@ public final class Caster {
      * @return casted Long Object
      */
     public static Long toLong(char c) {
-        return new Long(toLongValue(c));
+        return Long.valueOf(toLongValue(c));
     }
     
     /**
@@ -1370,7 +1370,7 @@ public final class Caster {
      * @return casted Long Object
      */
     public static Long toLong(double d) {
-        return new Long(toLongValue(d));
+        return Long.valueOf(toLongValue(d));
     }
 
     /**
@@ -1381,7 +1381,7 @@ public final class Caster {
      */
     public static Long toLong(Object o) throws PageException {
         if(o instanceof Long) return (Long)o;
-        return new Long(toLongValue(o));
+        return Long.valueOf(toLongValue(o));
         
     }
 
@@ -1392,7 +1392,7 @@ public final class Caster {
      * @throws PageException
      */
     public static Long toLong(String str) throws PageException {
-        return new Long(toLongValue(str));
+        return Long.valueOf(toLongValue(str));
         
     }
 
@@ -1404,11 +1404,11 @@ public final class Caster {
      */
     public static Long toLong(Object o, Long defaultValue) {
         if(o instanceof Long) return (Long)o;
-        if(defaultValue!=null) return new Long(toLongValue(o,defaultValue.longValue()));
+        if(defaultValue!=null) return Long.valueOf(toLongValue(o,defaultValue.longValue()));
         
         long res=toLongValue(o,Long.MIN_VALUE);
         if(res==Long.MIN_VALUE) return defaultValue;
-        return new Long(res);
+        return Long.valueOf(res);
     }
     
     /**
@@ -1633,7 +1633,7 @@ public final class Caster {
      * @return casted Short Object
      */
     public static Short toShort(boolean b) {
-        return new Short(toShortValue(b));
+        return Short.valueOf(toShortValue(b));
     }
     
     /**
@@ -1642,7 +1642,7 @@ public final class Caster {
      * @return casted Short Object
      */
     public static Short toShort(char c) {
-        return new Short(toShortValue(c));
+        return Short.valueOf(toShortValue(c));
     }
     
     /**
@@ -1651,7 +1651,7 @@ public final class Caster {
      * @return casted Byte Object
      */
     public static Short toShort(double d) {
-        return new Short(toShortValue(d));
+        return Short.valueOf(toShortValue(d));
     }
 
     /**
@@ -1662,7 +1662,7 @@ public final class Caster {
      */
     public static Short toShort(Object o) throws PageException {
         if(o instanceof Short) return (Short)o;
-        return new Short(toShortValue(o));
+        return Short.valueOf(toShortValue(o));
         
     }
 
@@ -1673,7 +1673,7 @@ public final class Caster {
      * @throws PageException
      */
     public static Short toShort(String str) throws PageException {
-        return new Short(toShortValue(str));
+        return Short.valueOf(toShortValue(str));
         
     }
 
@@ -1685,10 +1685,10 @@ public final class Caster {
      */
     public static Short toShort(Object o, Short defaultValue) {
         if(o instanceof Short) return (Short)o;
-        if(defaultValue!=null)return new Short(toShortValue(o,defaultValue.shortValue()));
+        if(defaultValue!=null)return Short.valueOf(toShortValue(o,defaultValue.shortValue()));
         short res=toShortValue(o,Short.MIN_VALUE);
         if(res==Short.MIN_VALUE) return defaultValue;
-        return new Short(res);
+        return Short.valueOf(res);
     }
     
     /**
@@ -3561,7 +3561,7 @@ public final class Caster {
      * @return casted Integer
      */
     public static Integer toRef(int i) {
-        return Constants.Integer(i);
+        return Integer.valueOf(i);
     }
     
     /**
@@ -3579,7 +3579,7 @@ public final class Caster {
      * @return casted Long
      */
     public static Long toRef(long l) {
-        return new Long(l);
+        return Long.valueOf(l);
     }
     
     /**
@@ -3597,7 +3597,7 @@ public final class Caster {
      * @return casted Short
      */
     public static Short toRef(short s) {
-        return new Short(s);
+        return Short.valueOf(s);
     }
 
     /**
@@ -3890,7 +3890,7 @@ public final class Caster {
      * @return Integer from char
      */
     public static Integer toInteger(char c) {
-        return Constants.Integer(c);
+        return Integer.valueOf(c);
     }
 
     /**
@@ -3899,7 +3899,7 @@ public final class Caster {
      * @return Integer from double
      */
     public static Integer toInteger(double d) { 
-        return Constants.Integer((int)d);
+        return Integer.valueOf((int)d);
     }
     
     /**
@@ -3909,7 +3909,7 @@ public final class Caster {
      * @throws PageException
      */
     public static Integer toInteger(Object o) throws PageException {
-        return Constants.Integer(toIntValue(o));
+        return Integer.valueOf(toIntValue(o));
     }
     
     /**
@@ -3919,12 +3919,12 @@ public final class Caster {
      * @throws PageException
      */
     public static Integer toInteger(String str) throws PageException {
-        return Constants.Integer(toIntValue(str));
+        return Integer.valueOf(toIntValue(str));
     }
     
     // used in bytecode genrator 
     public static Integer toInteger(int i) {
-        return Constants.Integer(i);
+        return Integer.valueOf(i);
     }
     
     /**
@@ -3934,10 +3934,10 @@ public final class Caster {
      * @return Integer from Object
      */
     public static Integer toInteger(Object o, Integer defaultValue) {
-        if(defaultValue!=null) return Constants.Integer(toIntValue(o,defaultValue.intValue()));
+        if(defaultValue!=null) return Integer.valueOf(toIntValue(o,defaultValue.intValue()));
         int res=toIntValue(o,Integer.MIN_VALUE);
         if(res==Integer.MIN_VALUE) return defaultValue;
-        return new Integer(res);
+        return Integer.valueOf(res);
     }
     
     /**
@@ -4139,8 +4139,8 @@ public final class Caster {
 		else if(trgClass==boolean.class)return Caster.toBoolean(obj); 
 		else if(trgClass==byte.class)return Caster.toByte(obj); 
 		else if(trgClass==short.class)return Caster.toShort(obj); 
-		else if(trgClass==int.class)return Constants.Integer(Caster.toDouble(obj).intValue()); 
-		else if(trgClass==long.class)return new Long(Caster.toDouble(obj).longValue()); 
+		else if(trgClass==int.class)return Integer.valueOf(Caster.toDouble(obj).intValue()); 
+		else if(trgClass==long.class)return Long.valueOf(Caster.toDouble(obj).longValue()); 
 		else if(trgClass==float.class)return new Float(Caster.toDouble(obj).floatValue()); 
 		else if(trgClass==double.class)return Caster.toDouble(obj); 
 		else if(trgClass==char.class)return Caster.toCharacter(obj); 
@@ -4148,8 +4148,8 @@ public final class Caster {
 		else if(trgClass==Boolean.class)return Caster.toBoolean(obj); 
 		else if(trgClass==Byte.class)return Caster.toByte(obj); 
 		else if(trgClass==Short.class)return Caster.toShort(obj); 
-		else if(trgClass==Integer.class)return Constants.Integer(Caster.toDouble(obj).intValue()); 
-		else if(trgClass==Long.class)return new Long(Caster.toDouble(obj).longValue()); 
+		else if(trgClass==Integer.class)return Integer.valueOf(Caster.toDouble(obj).intValue()); 
+		else if(trgClass==Long.class)return Long.valueOf(Caster.toDouble(obj).longValue()); 
 		else if(trgClass==Float.class)return new Float(Caster.toDouble(obj).floatValue()); 
 		else if(trgClass==Double.class)return Caster.toDouble(obj); 
 		else if(trgClass==Character.class)return Caster.toCharacter(obj); 
